--- a/src/styles/components/banner.css
+++ b/src/styles/components/banner.css
@@ -1,3 +1,7 @@
+.wrapper {
+  container-type: inline-size;
+  container-name: main-container;
+}
 .wrapper .banner {
   transition: 500ms;
   width: 100vw;
@@ -6,6 +10,9 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   gap: 1px;
+}
+.wrapper .sm-banner {
+  display: none;
 }
 .wrapper .banner .item {
   display: flex;
@@ -197,5 +204,18 @@
   }
   to {
     background-position: 0.1% 0;
+  }
+}
+@container main-container (max-width: 1024px) {
+  .wrapper .banner {
+    display: none;
+  }
+  .wrapper .sm-banner {
+    display: block;
+    width: 100%;
+    height: 100vh;
+    background: url("../../images/banner3.jpg") no-repeat center;
+    background-size: cover;
+    border-radius: 0 0 var(--radius) var(--radius);
   }
 }
