--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,6 +7,7 @@
 
 @import "./utils/variables.css";
 @import "./default/base.css";
+@import "./components/banner.css";
 @import "./components/header.css";
 @import "./components/footer.css";
 
