--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -30,7 +30,8 @@ header nav ul li a {
   padding: 0.5rem 0;
   color: var(--light);
 }
-header ul li:hover a {
+header ul li:hover a,
+header ul li a.active {
   color: var(--white);
   border-bottom: 2px solid var(--highlight);
 }
