--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -152,7 +152,6 @@
 .featuresgrid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  /* grid-template-rows: repeat(4, 1fr); */
   min-height: 36rem;
 }
 
@@ -230,6 +229,9 @@
 .scroll-content .item:hover {
   cursor: pointer;
 }
+.scroll-content .item img {
+  height: 100%;
+}
 
 .video-section {
   display: flex;
@@ -239,6 +241,9 @@
   border-radius: var(--radius);
   overflow: hidden;
   aspect-ratio: 2/1;
+}
+.video-section .video video {
+  max-width: 934px;
 }
 .video-section .values-wrap {
   display: flex;
@@ -293,8 +298,6 @@
   }
   .wrapper .container .brief .imgwrap {
     aspect-ratio: 3/1;
-  }
-  .wrapper .container .brief .imgwrap img {
   }
   .wrapper .container .brief .contents {
     padding-top: 6rem;
@@ -362,6 +365,37 @@
   }
   .featuresgrid .item:nth-child(6):nth-child(-n + 8) {
     border-right: none;
+  }
+}
+@container main-container (max-width: 480px) {
+  .loading-bg {
+    height: 100svh;
+  }
+  .wrapper .container {
+    margin-top: 3rem;
+  }
+  .wrapper .container .brief .imgwrap {
+    aspect-ratio: 3/1.5;
+  }
+  .featuresgrid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .featuresgrid .item img {
+    width: 60px;
+  }
+  .scroll-content {
+    gap: 1rem;
+  }
+  .scroll-content .item {
+    min-width: 120px;
+    height: 120px;
+  }
+  .video-section .values-wrap .values {
+    flex-direction: column;
+    text-align: center;
+  }
+  .video-section .video video {
+    max-width: 100%;
   }
 }
 
