--- a/src/styles/components/banner.css
+++ b/src/styles/components/banner.css
@@ -209,12 +209,12 @@
 @container main-container (max-width: 480px) {
   .wrapper .banner {
     display: none;
-    height: 100svh;
+    height: 50dvh;
   }
   .wrapper .sm-banner {
     display: block;
     width: 100%;
-    height: 100vh;
+    height: 50dvh;
     background: url("../../images/banner3.jpg") no-repeat center;
     background-size: cover;
     border-radius: 0 0 var(--radius) var(--radius);
